--- a/app/node/auth.html
+++ b/app/node/auth.html
@@ -69,8 +69,8 @@
 		
         function CollectionCtrl($scope, $state, $rootScope, $http) {
             var vm = this;
-			//var url = 'http://localhost:3000/';
-			var url = 'http://jwt-base.herokuapp.com/';
+			var url = 'http://localhost:3000/';
+			//var url = 'http://jwt-base.herokuapp.com/';
 			
 			angular.extend(vm, {
 				init: init,
@@ -98,7 +98,7 @@
                 $http.post(url + 'api/login', item)
                         .then(function (results) {
 							$rootScope.loading = false;
-							$rootScope.access_token = results.data.token;
+							$rootScope.access_token = results.data;
 							console.log(results);
 							vm.getUsers();
                         })
